# kataru

./: .gitignore  Cargo.toml  LICENSE  README.md  output.txt  temp.txt
docs/: namespaces.md
examples/simple/: .gitignore  Cargo.toml  README.md  build.rs  config.yml
examples/simple/kataru/: bookmark.yml
examples/simple/kataru/story/: MirrorHub.yml  chapter2.yml  investigate.yml  monster.yml  start.yml  train.yml
examples/simple/kataru/story/chapter1/: conversation1.yml
examples/simple/kataru/story/intro/: intro.yml  intro1.yml  intro2.yml
examples/simple/src/: main.rs
examples/simple/story/: config.yml  story.yml
examples/simple/story/passages/: end.yml  start.yml  train.yml
src/: error.rs  lib.rs  packer.rs  runner.rs  structs.rs  tagger.rs  traits.rs  util.rs  validator.rs  vars.rs
src/ast/: eval.rs  grammar.pest  mod.rs  parser.rs
src/parser/: README.md  branches.rs  comparator.rs  conditional.rs  config.rs  kataru.pest  mod.rs  operator.rs  semtokens.rs  span.rs  state.rs  story.rs  value.rs
src/parser/ast/: expressions.rs  file.rs  mod.rs  operators.rs  passages.rs
src/structs/: attributes.rs  bookmark.rs  branches.rs  choices.rs  command.rs  comparator.rs  conditional.rs  config.rs  dialogue.rs  line.rs  map.rs  mod.rs  operator.rs  section.rs  state.rs  story.rs  value.rs
src/traits/: file.rs  mod.rs  text.rs
src/value/: grammar.pest  mod.rs  operators.rs  parser.rs
tests/: attributes.rs  autogen.rs  bugtest.rs  character_commands.rs  choices.rs  conditionals.rs  dangleif.rs  file_formats.rs  namespaces.rs  packer.rs  read_line.rs  runner.rs  state.rs  validate.rs  validator.rs
tests/data/: bookmark.yml
tests/data/attributes/: namespace1.yml  story.yml
tests/data/bugtest/: story.yml
tests/data/choices/: story.yml
tests/data/conditionals/: story.yml
tests/data/dangleif/: story.yml
tests/data/file_formats/: commented.yml  config.yml  start.yml
tests/data/minimal/: story.yml
tests/data/namespaces/: global.yml  namespace1.yml  namespace2.yml
tests/data/state/: story.yml
tests/data/story/: story.yml
