[package]
authors = ["Josiah Putman <joshikatsu@gmail.com>"]
description = "Kataru - the YAML-based dialogue engine for game development."
documentation = "https://kataru-lang.github.io/#/README"
edition = "2018"
license = "MIT OR Apache-2.0"
name = "kataru"
version = "0.1.8"

[dependencies]
bincode = "1.3.1"
colored = "2.0.0"
glob = "0.3.0"
lazy_static = "1.4.0"
linear-map = {version = "1.2.0", features = ["serde_impl"]}
maplit = "1.0.2"
ouroboros = "0.18.0"
pest = "2.1.3"
pest_derive = "2.1.0"
regex = "1.4.2"
rmp-serde = "0.15.1"
serde = {version = "1.0.117", features = ["derive"]}
serde_yaml = "0.8.15"
wasm-bindgen = {version = "0.2.70", optional = true}
yaml-rust = "0.4.4"

[features]
wasm = ["wasm-bindgen"]

default = []
