[package]
authors = ["Josiah Putman <joshikatsu@gmail.com>"]
description = "Kataru - the YAML-based dialogue engine for game development."
documentation = "https://kataru-lang.github.io/#/README"
edition = "2018"
license = "MIT OR Apache-2.0"
name = "kataru"
version = "0.1.11"

[dependencies]
bincode = "1.3.3"
colored = "2.2.0"
glob = "0.3.1"
lazy_static = "1.5.0"
linear-map = {version = "1.2.0", features = ["serde_impl"]}
maplit = "1.0.2"
ouroboros = "0.18.4"
pest = "2.7.15"
pest_derive = "2.7.15"
regex = "1.11.1"
rmp-serde = "0.15.5"
serde = {version = "1.0.217", features = ["derive"]}
serde_yaml = "0.8.26"
wasm-bindgen = {version = "0.2.99", optional = true}
yaml-rust = "0.4.5"

[features]
wasm = ["wasm-bindgen"]

default = []
