[package]
authors = ["Josiah Putman <joshikatsu@gmail.com>"]
description = "Kataru - the YAML-based dialogue engine for game development."
documentation = "https://kataru-lang.github.io/#/README"
edition = "2024"
license = "MIT OR Apache-2.0"
name = "kataru"
version = "0.2.1"

[dependencies]
bincode = "1.3.3"
colored = "2.2.0"
glob = "0.3.1"
lazy_static = "1.5.0"
linear-map = { version = "1.2.0", features = ["serde_impl"] }
maplit = "1.0"
ouroboros = "0.18"
pest = "2.8"
pest_derive = "2.8"
regex = "1.13"
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
wasm-bindgen = { version = "0.2", optional = true }
yaml-rust = "0.4.5"

[features]
wasm = ["wasm-bindgen"]

default = []
